--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header container nav marginAuto textAlign">
         <ul>
-            <li><a href="#">main</a></li>
+            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/index.html">main</a></li>
             <li><a href="#">o mnie</a></li>
             <li>
                 <a href="#">projekty</a>
@@ -21,14 +21,13 @@
             </li>
             <li><a href="#">galeria</a></li>
             <li><a href="#">oferta</a></li>
-            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt/kontakt.html">kontakt</a></li>
+            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt.html">kontakt</a></li>
         </ul>
 
     </section>
     <section class="container marginAuto jumbotron">
-        <h1>Witaj na mojej stronie!</h1>
-        <h3>Rozejrzyj się, jeśli chcesz mnie poznać.</h3>
-        <button>touch!</button>
+        <h1>Skontaktuj się ze mną!</h1>
+
     </section>
     <section class="footer container marginAuto textAlign">
         <p>@makaron3d_2017@</p>
