--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </ul>
 
     </section>
-    <section class="container marginAuto jumbotron">
+    <section id="hero" class="container marginAuto jumbotron">
         <h1>Witaj na mojej stronie!</h1>
         <h3>Rozejrzyj się, jeśli chcesz mnie poznać.</h3>
-        <button>touch!</button>
+        
     </section>
     <section class="footer container marginAuto textAlign">
         <p>@makaron3d_2017@</p>
