--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -26,8 +26,20 @@
 
     </section>
     <section class="container marginAuto jumbotron">
-        <h1>Skontaktuj się ze mną!</h1>
-
+        <h1>Skontaktuj się ze mną!</h1> 
+        <div class="contact">
+            <h4>Kompas - Konrad Makarewicz</h4><br>
+            <p>email: makaron3d@gmail.com</p>
+            <p>fb: https://www.facebook.com/makaron3d</p>
+            <p>kom. 791623582</p>
+        </div>
+        <form id="sendEmail">
+            <input id="firstName" type="text" name="firstName" value="imię:"><br>
+            <input id="adress" type="text" name="adress" value="email:"><br>
+            <textarea rows="7" name="writeEmail" id="writeEmail">Stwórz wiadomość...</textarea>
+            <input class="submit" type="submit" value="Wyślij">
+        </form>
+        <div id="info"></div>
     </section>
     <section class="footer container marginAuto textAlign">
         <p>@makaron3d_2017@</p>
