--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -30,7 +30,7 @@
         <div class="contact">
             <h4>Kompas - Konrad Makarewicz</h4><br>
             <p>email: makaron3d@gmail.com</p>
-            <p>fb: https://www.facebook.com/makaron3d</p>
+            <p>fb: <a href="https://www.facebook.com/makaron3d">https://www.facebook.com/makaron3d</a></p>
             <p>kom. 791623582</p>
         </div>
         <form id="sendEmail">
