--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my own site</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="../fontello/css/fontello.css" type="text/css" />
+
+
 
 </head>
 <body>
@@ -19,19 +23,19 @@
                     <li><a href="#">aplikacje</a></li>     
                 </ul>
             </li>
-            <li><a href="#">galeria</a></li>
+            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/gallery/gallery.html">galeria</a></li>
             <li><a href="#">oferta</a></li>
-            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt.html">kontakt</a></li>
+            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt/kontakt.html">kontakt</a></li>
         </ul>
 
     </section>
     <section class="container marginAuto jumbotron">
         <h1>Skontaktuj się ze mną!</h1> 
         <div class="contact">
-            <h4>Kompas - Konrad Makarewicz</h4><br>
-            <p>email: makaron3d@gmail.com</p>
-            <p>fb: <a href="https://www.facebook.com/makaron3d">https://www.facebook.com/makaron3d</a></p>
-            <p>kom. 791623582</p>
+            <h2>Kompas - Konrad Makarewicz</h2><br>
+            <p><i class="icon-envelope-open-o"></i> makaron3d@gmail.com</p>
+            <p><i class="icon-facebook-squared"></i><a href="https://www.facebook.com/makaron3d">https://www.facebook.com/makaron3d</a></p>
+            <p><i class="icon-phone-squared"></i> 791623582</p>
         </div>
         <form id="sendEmail">
             <input id="firstName" type="text" name="firstName" value="imię:"><br>
