--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my own site</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
+
 
 </head>
 <body>
     <section class="header container nav marginAuto textAlign">
         <ul>
-            <li><a href="#">main</a></li>
+            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/index.html">main</a></li>
             <li><a href="#">o mnie</a></li>
             <li>
                 <a href="#">projekty</a>
@@ -19,7 +21,7 @@
                     <li><a href="#">aplikacje</a></li>     
                 </ul>
             </li>
-            <li><a href="#">galeria</a></li>
+            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/gallery/gallery.html">galeria</a></li>
             <li><a href="#">oferta</a></li>
             <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt/kontakt.html">kontakt</a></li>
         </ul>
