--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -27,7 +27,7 @@
         </ul>
 
     </section>
-    <section class="marginAuto gallery">
+    <section class="marginAuto gallery container">
         <div class="row">
            <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
            <a class="col-3" onclick="this.target='_blank'"  href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
