--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -21,7 +21,7 @@
                     <li><a href="#">aplikacje</a></li>     
                 </ul>
             </li>
-            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/gallery/gallery.html">galeria</a></li>
+            <li id="galeria"><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/gallery/gallery.html">galeria</a></li>
             <li><a href="#">oferta</a></li>
             <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt/kontakt.html">kontakt</a></li>
         </ul>
@@ -29,28 +29,29 @@
     </section>
     <section class="marginAuto gallery container">
         <div class="row">
-           <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
-           <a class="col-3" onclick="this.target='_blank'"  href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
-           <a class="col-3" href="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek" ><img onclick="this.target='_blank'"  src="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek"></a>
-           <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
+          <h1>Kilka zdjęć!</h1>
+          <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
+          <a class="col-3" onclick="this.target='_blank'"  href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
+          <a class="col-3" href="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek" ><img onclick="this.target='_blank'"  src="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek"></a>
+          <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
         </div>
         <div class="row">
-           <img class="col-3" src="http://www.fromoldbooks.org/OldEngland/pages/0111-Norman-Keep-Pevensey/0111-Norman-Keep-Pevensey-q75-800x600.jpg" alt="stary zamek">
-           <a class="col-3" href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
-           <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
-           <img class="col-3" src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg" alt="stary zamek">
+          <img class="col-3" src="http://www.fromoldbooks.org/OldEngland/pages/0111-Norman-Keep-Pevensey/0111-Norman-Keep-Pevensey-q75-800x600.jpg" alt="stary zamek">
+          <a class="col-3" href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
+          <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
+          <img class="col-3" src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg" alt="stary zamek">
         </div>
         <div class="row">
-           <img class="col-3" src="http://www.fromoldbooks.org/OldEngland/pages/0111-Norman-Keep-Pevensey/0111-Norman-Keep-Pevensey-q75-800x600.jpg" alt="stary zamek">
-           <img class="col-3" src="http://www.fromoldbooks.org/Boswell-Antiquities/pages/049-Stone-Henge-bg1/049-Stone-Henge-bg1-q75-800x600.jpg" alt="stary zamek">
-           <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
-           <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=216-HarlechCastle-ViewFromTheSW-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
+          <img class="col-3" src="http://www.fromoldbooks.org/OldEngland/pages/0111-Norman-Keep-Pevensey/0111-Norman-Keep-Pevensey-q75-800x600.jpg" alt="stary zamek">
+          <img class="col-3" src="http://www.fromoldbooks.org/Boswell-Antiquities/pages/049-Stone-Henge-bg1/049-Stone-Henge-bg1-q75-800x600.jpg" alt="stary zamek">
+          <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
+          <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=216-HarlechCastle-ViewFromTheSW-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
         </div>
-<div class="row">
-           <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
-           <a class="col-3" onclick="this.target='_blank'"  href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
-           <a class="col-3" href="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek" ><img onclick="this.target='_blank'"  src="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek"></a>
-           <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
+        <div class="row">
+          <a class="col-3" onclick="this.target='_blank'" href="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"><img src="http://www.fromoldbooks.org/Grose-Antiquities-VolIII/pages/082-Ostenhanger-House-Kent-plate-1/082-Ostenhanger-House-Kent-plate-1-q85-800x600.jpg"></a>
+          <a class="col-3" onclick="this.target='_blank'"  href="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"><img src="http://www.fromoldbooks.org/i.cgi?src=OmanCastles&img=208-Upton-Castle-The-Gate-House-q95-800x600.jpg" alt="stary zamek"></a>
+          <a class="col-3" href="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek" ><img onclick="this.target='_blank'"  src="https://www.fromoldbooks.org/RedBookOfYork/pages/01-View-From-City-Walls-bg/01-View-From-City-Walls-bg-q75-800x600.jpg" alt="stary zamek"></a>
+          <a class="col-3" href="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"><img src="https://vignette.wikia.nocookie.net/uncyclopedia/images/d/d5/Hiroshima_Dome_Reconstruction.JPG/revision/latest?cb=20100202153924" alt="stary zamek"></a>
         </div>
     </section>
     <section class="footer container marginAuto textAlign">
