--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section class="header container nav marginAuto textAlign">
         <ul>
-            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/index.html">main</a></li>
+            <li id="main"><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/index.html">main</a></li>
             <li><a href="#">o mnie</a></li>
             <li>
                 <a href="#">projekty</a>
