--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -25,7 +25,7 @@
             </li>
             <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/gallery/gallery.html">galeria</a></li>
             <li><a href="#">oferta</a></li>
-            <li><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt/kontakt.html">kontakt</a></li>
+            <li id="kontakt"><a href="///D:/programowanie/moje%20portfolio/Moja%20strona/kontakt/kontakt.html">kontakt</a></li>
         </ul>
 
     </section>
@@ -33,9 +33,10 @@
         <h1>Skontaktuj się ze mną!</h1> 
         <div class="contact">
             <h2>Kompas - Konrad Makarewicz</h2><br>
-            <p><i class="icon-envelope-open-o"></i> makaron3d@gmail.com</p>
-            <p><i class="icon-facebook-squared"></i><a href="https://www.facebook.com/makaron3d">https://www.facebook.com/makaron3d</a></p>
-            <p><i class="icon-phone-squared"></i> 791623582</p>
+            <p><i class="icon-googleplus" style="color: #F0361A; font-size: 16px;"></i> makaron3d@gmail.com</p>
+            <p><i class="icon-facebook-squared" style="color: #1E4974"></i><a href="https://www.facebook.com/makaron3d">konto - facebook</a></p>
+            <p><i class="icon-youtube"  style="color: #F01A1A"></i><a href="  https://www.youtube.com/channel/UCgZzYsokn0SJspnnGa2cFtw?view_as=subscriber">konto - youtube</a></p>
+            <p><i class="icon-phone-squared" style="color: #4AD40F"></i> 791623582</p>
         </div>
         <form id="sendEmail">
             <input id="firstName" type="text" name="firstName" value="imię:"><br>
