--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>my own site</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=latin-ext" rel="stylesheet">
+    <!--<meta http-equiv="X-UA-Compatybile" content="ie=edge">-->
 
 
 </head>
