--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -40,7 +40,7 @@
         </div>
         <form id="sendEmail">
             <input id="firstName" type="text" name="firstName" value="imię:"><br>
-            <input id="adress" type="text" name="adress" value="email:"><br>
+            <input id="adress" type="email" name="adress" value="email:"><br>
             <textarea rows="7" name="writeEmail" id="writeEmail">Stwórz wiadomość...</textarea>
             <input class="submit" type="submit" value="Wyślij">
         </form>
